--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,10 +1,9 @@
 nelmio_cors:
     defaults:
-        allow_origin: ['*']
-        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Authorization']
+        origin_regex: true
+        allow_origin: [ '%env(CORS_ALLOW_ORIGIN)%' ]
+        allow_methods: [ 'GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE' ]
+        allow_headers: [ 'Content-Type', 'Authorization' ]
         allow_credentials: true
-        expose_headers: ['Link']
-        max_age: 3600
-    paths:
-        '^/': null
+        expose_headers: [ 'Link' ]
+        max_age: 1
